# CUDA

exercise00/: Makefile  liste.c  liste.h  main.c
exercise01/: 1.txt  3.txt  CMakeLists.txt  main.cu
exercise02/fail kernel/: answers.txt  main.cu
exercise02/raytracer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  scene.ppm  test.ppm
exercise02/raytracer/scenes/: test.yaml
exercise02/raytracer/src/: main.cc  parser.cc  ppm_writer.cc  raytracer.cc  raytracer.h  types.cc  types.h
exercise03/raytracer/: CMakeLists.txt
exercise03/raytracer/src/: copyToDevice.cc  copyToDevice.cu  copyToDevice.h  main.cc  parser.cc  ppm_writer.cc  raytracer.cc  raytracer.h  types.h
exercise04/raytracer/: CMakeLists.txt  info.txt
exercise04/raytracer/scenes/: scene_angle_v2.yaml  test2.yaml  tetraeder.yaml  tetraeder_v2.yaml
exercise04/raytracer/src/: main.cc  ppm_writer.cc  raytracer.cc  raytracer.h  types.cc
exercise05/: Assignment 3.txt
exercise05/raytracer/scenes/: test1.yaml  tetraeder_mod.yaml
exercise05/raytracer/src/: parser.cc  parser.h  raytracer.cu  raytracer.h  types.h
exercise06/raytracer/: CMakeLists.txt  time measure.txt
exercise06/raytracer/scenes/: dt.yaml  myScene.yaml  tetraeder_mod.yaml
exercise06/raytracer/src/: main.cc  raytracer.cc  raytracer.h  types.cc  types.h  windowHandling.cc  windowHandling.h
